--- a/src/components/CardItem.astro
+++ b/src/components/CardItem.astro
@@ -2,6 +2,6 @@
 const { class: className = "" } = Astro.props;
 ---
 
-<div class={`bg-white/5 shadow-md shadow-gray-600 overflow-hidden relative rounded-2xl ${className}`}>
+<div class={`bg-transparent border border-gray-600 overflow-hidden relative rounded-2xl ${className}`}>
   <slot />
 </div>
