Hover color icon in header component

--- a/src/assets/icons/VueIcon.astro
+++ b/src/assets/icons/VueIcon.astro
@@ -3,7 +3,7 @@ const { color = 'currentColor', size = 24 } = Astro.props;
 ---
 
 <svg
-  fill={color}
+  stroke={color}
   width={size}
   height={size}
   viewBox="0 0 24 24"
