Refactor description perfil

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,15 +22,13 @@ const { id } = Astro.props;
       Hola, soy Luis Gómez 👋
     </h1>
     <h2
-      class="text-xl sm:text-2xl lg:text-3xl font-semibold text-gray-800 dark:text-white flex items-center aos-init aos-animate"
-      data-aos-delay="600"
-      data-aos="fade-right"
+      class="text-xl sm:text-2xl lg:text-3xl font-semibold text-gray-800 dark:text-white flex items-center"
     >
       <span class="typing-text">Desarrollador FullStack</span>
     </h2>
     <p class="text-lg text-gray-800 opacity-70 dark:text-gray-200 leading-relaxed max-w-lg">
-      Ingeniero de sistemas y desarrollador web con más de cuatro años de experiencia en el diseño,
-      desarrollo y mantenimiento de aplicaciones web.
+      Ingeniero de sistemas con más de cuatro años de experiencia en el diseño, desarrollo y
+      mantenimiento de aplicaciones web modernas.
     </p>
     <div class="flex items-center space-x-4">
       <span class="text-gray-800 dark:text-white font-medium">Sígueme en:</span>
