Refactir funtions of experience

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -13,14 +13,18 @@ const { id } = Astro.props;
         <p class="text-base opacity-70">Zabud Technologies | 2019 - 2024</p>
         <ul class="list-disc pl-5">
           <li>
-            Desarrollo de microservicios en Java con Spring Boot, aplicando principios de
-            arquitectura hexagonal.
+            Desarrollo de microservicios en Java con Spring Boot, aplicando arquitectura hexagonal
+            para lograr sistemas escalables y mantenibles.
           </li>
           <li>
-            Optimización de interfaces web utilizando frameworks modernos como Angular y Vue.js.
+            Optimización de interfaces web con Angular y Vue.js, enfocándome en el rendimiento, la
+            accesibilidad y una experiencia de usuario fluida.
           </li>
-          <li>Integración eficiente de microservicios desde el frontend.</li>
-          <li>Trabajo colaborativo en equipos ágiles bajo metodologías SCRUM.</li>
+          <li>Integración eficiente entre frontend y backend mediante consumo de APIs REST.</li>
+          <li>
+            Trabajo en equipos ágiles bajo metodologías SCRUM, aplicando buenas prácticas de
+            desarrollo colaborativo.
+          </li>
         </ul>
       </div>
       <picture class="flex justify-center items-center w-full lg:w-auto">
