Animation with AOS

--- a/src/assets/icons/CvIcon.astro
+++ b/src/assets/icons/CvIcon.astro
@@ -1,7 +1,6 @@
 ---
-const { color = "currentColor", size = 24 } = Astro.props;
+const { color = 'currentColor', size = 24 } = Astro.props;
 ---
-
 <svg
   xmlns="http://www.w3.org/2000/svg"
   width={size}
@@ -9,13 +8,11 @@ const { color = "currentColor", size = 24 } = Astro.props;
   viewBox="0 0 24 24"
   fill="none"
   stroke={color}
-  stroke-width="1.5"
+  stroke-width="1"
   stroke-linecap="round"
   stroke-linejoin="round"
-  class="icon icon-tabler icons-tabler-outline icon-tabler-file-cv"
+  class="icon icon-tabler icons-tabler-outline icon-tabler-download"
   ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
-    d="M14 3v4a1 1 0 0 0 1 1h4"></path><path
-    d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z"
-  ></path><path d="M11 12.5a1.5 1.5 0 0 0 -3 0v3a1.5 1.5 0 0 0 3 0"></path><path
-    d="M13 11l1.5 6l1.5 -6"></path></svg
+    d="M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2"></path><path d="M7 11l5 5l5 -5"></path><path
+    d="M12 4l0 12"></path></svg
 >
