--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -50,6 +50,6 @@ import LinkedIn from '../assets/icons/LinkedIn.astro';
   </div>
   <div class="mt-10 border-t border-gray-200 dark:border-gray-700 pt-6 text-center">
     <p class="text-sm text-gray-600 dark:text-gray-400">
-      © {new Date().getFullYear()} Luis Gómez. Todos los derechos reservados.
+      © {new Date().getFullYear()} Luis Gómez. Casi todos los derechos reservados.
     </p>
 </footer>
