--- a/src/components/CardItem.astro
+++ b/src/components/CardItem.astro
@@ -1,7 +1,10 @@
 ---
-const { class: className = "" } = Astro.props;
+const { class: className = '', dataAos = 'fade-up' } = Astro.props;
 ---
 
-<div class={`bg-transparent border border-gray-600 overflow-hidden relative hover:shadow-md shadow-gray-600 transition-shadow duration-300 rounded-2xl ${className}`}>
+<div
+  class={`bg-transparent border border-gray-600 overflow-hidden relative hover:shadow-md shadow-gray-600 transition-shadow duration-300 rounded-2xl ${className}`}
+  data-aos={dataAos}
+>
   <slot />
 </div>
