--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -8,7 +8,7 @@ const { id } = Astro.props;
 <Section title="Experiencia" id={id}>
   <CardItem class="py-8 px-8 lg:px-12">
     <div class="flex justify-between items-center flex-wrap-reverse gap-8">
-      <div class="flex flex-col gap-4">
+      <div class="flex flex-col gap-4 max-w-3xl">
         <h4 class="text-2xl font-bold">Desarrollador Full-Stack</h4>
         <p class="text-base opacity-70">Zabud Technologies | 2019 - 2024</p>
         <ul class="list-disc pl-5">
@@ -27,8 +27,8 @@ const { id } = Astro.props;
           </li>
         </ul>
       </div>
-      <picture class="flex justify-center items-center w-full lg:w-auto">
-        <img class="size-28 object-cover rounded" src="/images/zabud.webp" alt="Logo Zabud" />
+      <picture class="flex justify-center items-center w-full lg:w-auto flex-1">
+        <img class="size-40 object-cover rounded" src="/images/zabud.webp" alt="Logo Zabud" />
       </picture>
     </div>
   </CardItem>
