--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -19,7 +19,9 @@ const { id } = Astro.props;
   <div class="w-full grid auto-rows-[auto] lg:auto-rows-[150px] grid-cols-8 gap-4">
     {
       PROJECTS.map((project, index) => (
-        <CardItem class={`py-8 px-8 lg:px-12 row-span-1 col-span-8 ${project.className}`}>
+        <CardItem
+          class={`py-8 px-8 lg:px-12 row-span-1 col-span-8 ${project.className}`}
+        >
           <div class="flex flex-col h-full gap-2">
             <div class="flex justify-between items-center mb-2 gap-4">
               <div class="flex items-center gap-1 md:gap-3 opacity-70">
