--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -5,9 +5,7 @@ const { title, subtitle, id } = Astro.props;
 <section id={id} class="scroll-mt-24">
   <div class="text-center mb-8">
     <h3 class="text-3xl font-semibold">{title}</h3>
-    {subtitle && (
-      <p class="opacity-70 text-base">{subtitle}</p>
-    )}
+    {subtitle && <p class="opacity-70 text-base">{subtitle}</p>}
   </div>
   <slot />
 </section>
