Refactor Nav scroll

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -78,7 +78,7 @@ import MailIcon from '../assets/icons/MailIcon.astro';
         nav?.classList.add('sm:bg-gray-900', 'sm:shadow-md');
         nav?.classList.remove('bg-transparent');
       } else {
-        nav?.classList.remove('sm:bg-white/80', 'sm:shadow-md');
+        nav?.classList.remove('sm:bg-gray-900', 'sm:shadow-md');
         nav?.classList.add('bg-transparent');
       }
     });
