--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -11,9 +11,9 @@ const { id } = Astro.props;
     <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
       {
         SKILLS.map((skill) => (
-          <div class="flex flex-col items-center group text-center cursor-pointer">
+          <div class="flex flex-col items-center text-center">
             <img
-              class="w-16 h-16 mb-2 object-contain md:grayscale group-hover:grayscale-0 transition-all duration-300"
+              class="w-16 h-16 mb-2 object-contain"
               src={skill.icon}
               alt={skill.name}
               loading="lazy"
