Change color primary to green

--- a/src/components/ButtonLink.astro
+++ b/src/components/ButtonLink.astro
@@ -3,7 +3,7 @@ const { href, class: className = "bg-white" } = Astro.props;
 ---
 
 <a
-  class={`flex items-center font-medium text-black px-3 py-2 rounded-lg gap-2 hover:scale-105 transition-all duration-300 cursor-pointer ${className}`}
+  class={`flex items-center border-2 border-white font-medium text-black px-3 py-2 rounded-lg gap-2 hover:scale-105 transition-all duration-300 cursor-pointer ${className}`}
   href={href}
   target="_blank"
 >
