--- a/src/components/CardItem.astro
+++ b/src/components/CardItem.astro
@@ -3,7 +3,7 @@ const { class: className = '', dataAos = 'fade-up' } = Astro.props;
 ---
 
 <div
-  class={`bg-transparent border border-gray-600 overflow-hidden relative hover:shadow-md shadow-gray-600 transition-shadow duration-300 rounded-2xl ${className}`}
+  class={`bg-black/20 border border-black/50 overflow-hidden relative rounded-2xl ${className}`}
   data-aos={dataAos}
 >
   <slot />
