--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -18,15 +18,16 @@ const { id } = Astro.props;
   class="grid lg:grid-cols-2 gap-x-12 gap-y-24 items-center min-h-[calc(100vh-5rem)] py-12 scroll-mt-30"
 >
   <div class="flex flex-col gap-6" data-aos="fade-right">
-    <h1 class="text-5xl sm:text-5xl lg:text-6xl font-bold text-gray-800 dark:text-white">
-      Hola, soy Luis Gómez 👋
-    </h1>
-    <h2
-      class="text-2xl lg:text-3xl font-semibold text-gray-800 dark:text-white flex items-center"
-    >
-      <span class="typing-text text-blue-500">Desarrollador FullStack</span>
+    <div>
+      <span class="text-2xl">Hola, soy</span>
+      <h1 class="text-5xl sm:text-5xl lg:text-6xl font-bold text-gray-800 dark:text-white">
+        Luis Gómez Arteaga
+      </h1>
+    </div>
+    <h2 class="text-2xl lg:text-3xl font-semibold text-gray-800 dark:text-white flex items-center">
+      <span class="typing-text text-green-500">&lt;Desarrollador FullStack/&gt;</span>
     </h2>
-    <p class="text-lg text-gray-800 opacity-90 dark:text-blue-200 leading-relaxed max-w-lg">
+    <p class="text-lg text-gray-800 opacity-90 dark:text-green-100 leading-relaxed max-w-lg">
       Ingeniero de sistemas con más de cuatro años de experiencia en el diseño, desarrollo y
       mantenimiento de aplicaciones web modernas.
     </p>
