--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -71,5 +71,11 @@ const { title, description } = Astro.props;
       sans-serif;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    background-image: url(background.png);
+    background-repeat: repeat;
+  }
+
+  a {
+    box-sizing: border-box;
   }
 </style>
