--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ import GitHub from '../assets/icons/GitHub.astro';
 import LinkedIn from '../assets/icons/LinkedIn.astro';
 ---
 
-<footer class="bg-white dark:bg-gray-900 text-gray-800 dark:text-white py-12">
+<footer class="bg-white dark:bg-black text-gray-800 dark:text-white py-12">
   <div
     class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 grid grid-cols-1 md:grid-cols-2 gap-x-16 gap-y-10"
   >
@@ -52,4 +52,5 @@ import LinkedIn from '../assets/icons/LinkedIn.astro';
     <p class="text-sm text-gray-600 dark:text-gray-400">
       © {new Date().getFullYear()} Luis Gómez. Casi todos los derechos reservados.
     </p>
+  </div>
 </footer>
