--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -19,16 +19,14 @@ const { id } = Astro.props;
   <div class="w-full grid auto-rows-[auto] lg:auto-rows-[150px] grid-cols-8 gap-4">
     {
       PROJECTS.map((project, index) => (
-        <CardItem
-          class={`py-8 px-8 lg:px-12 row-span-1 col-span-8 ${project.className}`}
-        >
+        <CardItem class={`py-8 px-8 lg:px-12 row-span-1 col-span-8 ${project.className}`}>
           <div class="flex flex-col h-full gap-2">
             <div class="flex justify-between items-center mb-2 gap-4">
               <div class="flex items-center gap-1 md:gap-3 opacity-70">
                 <ProjectIcon class="w-6 h-6" />
                 <span class="text-sm md:text-lg font-semibold uppercase">{project.experience}</span>
               </div>
-              <div class="flex gap-2">
+              <div class="flex gap-4 md:gap-2">
                 {project.live && (
                   <ButtonLink href={project.live}>
                     <WebIcon color="#000" size={20} />
@@ -41,7 +39,7 @@ const { id } = Astro.props;
                 )}
               </div>
             </div>
-            <h3 class="text-2xl font-bold mb-2">{project.title}</h3>
+            <h3 class="text-2xl font-bold mb-2 text-green-500">{project.title}</h3>
             <p class="text-base opacity-80">{project.description}</p>
             <div class="flex items-center flex-wrap gap-2 mb-4 mt-2">
               {project.technologies.map((t) => (
