--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Header from '../components/Header.astro';
+import Hero from '../components/Hero.astro';
 import Projects from '../components/Projects.astro';
 import Skills from '../components/Skills.astro';
 import Experience from '../components/Experience.astro';
@@ -14,7 +14,7 @@ import 'aos/dist/aos.css';
   ,
   description="Bienvenidos a mi portafolio. Soy Luis Gómez, desarrollador web con más de cuatro años de experiencia en el diseño, desarrollo y mantenimiento de aplicaciones web."
 >
-  <Header id="inicio" />
+  <Hero id="inicio" />
   <Experience id="experiencia" />
   <Projects id="proyectos" />
   <Skills id="habilidades" />
