--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -71,7 +71,7 @@ const { title, description } = Astro.props;
       sans-serif;
     box-sizing: border-box;
     scroll-behavior: smooth;
-    background-image: url(background.png);
+    background-image: url('/background.png');
     background-repeat: repeat;
   }
 
