Background color body

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,7 +36,7 @@ const { title, description } = Astro.props;
       content="Bienvenidos a mi portafolio. Soy Luis Gómez, ingeniero de sistemas y desarrollador web con más de cuatro años de experiencia en el diseño, desarrollo y mantenimiento de aplicaciones web."
     />
   </head>
-  <body class="text-gray-200 bg-gray-800">
+  <body class="text-gray-200 bg-black">
     <Navbar />
     <main class="container max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 mt-22 mb-14 flex flex-col gap-20">
       <slot />
