Add tag available to work

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -41,8 +41,13 @@ const { id } = Astro.props;
           <LinkedIn class="w-6 h-6" />
         </ButtonLink>
       </div>
+      <div
+        class="px-3 py-1 text-sm rounded-full border text-green-600 border-current bg-white/5 backdrop-blur-sm"
+      >
+        Disponible para trabajar
+      </div>
     </div>
-    <div class="flex items-center gap-4">
+    <div class="flex items-center gap-4 mt-4">
       <ButtonLink href="mailto:luisgomez24g@gmail.com">
         <EmailIcon color="#000" size={20} />
         Contactar
