Hide tag on mobile

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -42,7 +42,7 @@ const { id } = Astro.props;
         </ButtonLink>
       </div>
       <div
-        class="px-3 py-1 text-xs md:text-sm rounded-full border text-green-600 border-current bg-white/5 backdrop-blur-sm"
+        class="px-3 py-1 text-xs md:text-sm rounded-full border text-green-600 border-current bg-white/5 backdrop-blur-sm md:inline-block hidden"
       >
         Disponible para trabajar
       </div>
