--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -31,7 +31,7 @@ const { id } = Astro.props;
       Ingeniero de sistemas con más de cuatro años de experiencia en el diseño, desarrollo y
       mantenimiento de aplicaciones web modernas.
     </p>
-    <div class="flex items-center space-x-2 md:space-x-4">
+    <div class="flex items-center space-x-4">
       <span class="text-gray-800 dark:text-white font-medium">Sígueme en:</span>
       <div class="flex space-x-3">
         <ButtonLink href="https://github.com/luisgomezadev">
