Refactor spacing in hero section and refactor in footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ import GitHub from '../assets/icons/GitHub.astro';
 import LinkedIn from '../assets/icons/LinkedIn.astro';
 ---
 
-<footer class="bg-white dark:bg-black text-gray-800 dark:text-white py-12">
+<footer class="bg-white dark:bg-[#111] text-gray-800 dark:text-white py-12">
   <div
     class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 grid grid-cols-1 md:grid-cols-2 gap-x-16 gap-y-10"
   >
@@ -24,24 +24,24 @@ import LinkedIn from '../assets/icons/LinkedIn.astro';
         <NavigationIcon />Navegación
       </h4><ul class="flex flex-col gap-2 text-sm text-gray-800 dark:text-gray-300">
         <li>
-          <a href="#inicio" class="hover:text-blue-600 dark:hover:text-blue-400 transition"
+          <a href="#inicio" class="hover:text-green-600 dark:hover:text-green-400 transition"
             >Inicio</a
           >
         </li><li>
-          <a href="#experiencia" class="hover:text-blue-600 dark:hover:text-blue-400 transition"
+          <a href="#experiencia" class="hover:text-green-600 dark:hover:text-green-400 transition"
             >Experiencia</a
           >
         </li><li>
-          <a href="#proyectos" class="hover:text-blue-600 dark:hover:text-blue-400 transition"
+          <a href="#proyectos" class="hover:text-green-600 dark:hover:text-green-400 transition"
             >Proyectos</a
           >
         </li><li>
-          <a href="#habilidades" class="hover:text-blue-600 dark:hover:text-blue-400 transition"
+          <a href="#habilidades" class="hover:text-green-600 dark:hover:text-green-400 transition"
             >Habilidades</a
           >
         </li>
         <li>
-          <a href="#contacto" class="hover:text-blue-600 dark:hover:text-blue-400 transition"
+          <a href="#contacto" class="hover:text-green-600 dark:hover:text-green-400 transition"
             >Contacto</a
           >
         </li>
@@ -50,7 +50,7 @@ import LinkedIn from '../assets/icons/LinkedIn.astro';
   </div>
   <div class="mt-10 border-t border-gray-200 dark:border-gray-700 pt-6 text-center">
     <p class="text-sm text-gray-600 dark:text-gray-400">
-      © {new Date().getFullYear()} Luis Gómez. Casi todos los derechos reservados.
+      © {new Date().getFullYear()} Luis Gómez Dev.
     </p>
   </div>
 </footer>
