--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -15,7 +15,7 @@ const { id } = Astro.props;
 
 <section
   id={id}
-  class="grid lg:grid-cols-2 gap-x-12 gap-y-24 items-center min-h-[calc(100vh-5rem)] py-12 scroll-mt-30"
+  class="grid lg:grid-cols-2 gap-x-12 gap-y-10 items-center min-h-[calc(100vh-5rem)] scroll-mt-30"
 >
   <div class="flex flex-col gap-6" data-aos="fade-right">
     <div>
