Delete images and refactor Play Match description

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -28,7 +28,7 @@ const { id } = Astro.props;
         </ul>
       </div>
       <picture class="flex justify-center items-center w-full lg:w-auto flex-1">
-        <img class="size-40 object-cover rounded" src="/images/zabud.webp" alt="Logo Zabud" />
+        <img class="size-40 object-cover rounded" loading="lazy" src="/images/zabud.webp" alt="Logo Zabud" />
       </picture>
     </div>
   </CardItem>
