--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -20,7 +20,7 @@ const { id } = Astro.props;
   <div class="flex flex-col gap-6" data-aos="fade-right">
     <div>
       <span class="text-2xl">Hola, soy</span>
-      <h1 class="text-5xl sm:text-5xl lg:text-6xl font-bold text-gray-800 dark:text-white">
+      <h1 class="text-5xl lg:text-6xl font-bold text-gray-800 dark:text-white">
         Luis Gómez
       </h1>
     </div>
